FFWS-48: fix off centre button text and remove after_content boolean

--- a/src/fleming-theme/templates/page-types/page-regions-countries.scss
+++ b/src/fleming-theme/templates/page-types/page-regions-countries.scss
@@ -103,7 +103,6 @@
     .regional-activity-button {
       @extend .button;
       margin-top: 0;
-      width: 100%;
       border: 0;
 
       &::after {
